[package]
name = "site"
version = "0.1.0"
authors = ["Grant Hunter <gr@nt-hunter.ca>"]

[dependencies]
iron = "*"
router = "*"
mount = "*"
bodyparser = "*"
persistent = "*"
params = "*"
plugin = "*"

rustc-serialize = "*"

serde = "*"
serde_derive = "*"
serde_json = "*"

toml = {version = "*", features = ["serde"]}

rust-crypto = "*"
rand = "*"

models = {path = "../models", features = ["iron"]}