[package]
name = "models"
version = "0.1.0"
authors = ["Grant Hunter <gr@nt-hunter.ca>"]

[dependencies]
diesel = "*"
diesel_codegen = { version = "*", features = ["postgres"] }

r2d2 = "*"
r2d2-diesel = "*"

serde = "*"
serde_derive = "*"
serde_json = "*"

rust-crypto = "*"
rand = "*"

iron = {version = "*"}

[features]
default = []